fix:change main scene

--- a/UIFramework/.project
+++ b/UIFramework/.project
@@ -1,1 +1,1 @@
-﻿{"ProjectGuid":"2382319D4D477D06E0A2DDAC92369FBC","ProjectName":"0","FileVersion":"1.3.0","EditorVersion":"v0.28.0.0","EngineVersion":"0.16.0","DefaultLevel":"NewLevel"}
+﻿{"ProjectGuid":"2382319D4D477D06E0A2DDAC92369FBC","ProjectName":"UIFramework","FileVersion":"1.3.0","EditorVersion":"v0.36.0.2","EngineVersion":"0.16.0","DefaultLevel":"NewLevel"}
