fix:完善了一部分生命函数

--- a/UIFramework/Config/UIOutlineData.ini
+++ b/UIFramework/Config/UIOutlineData.ini
@@ -37,3 +37,43 @@ EData=True
 LData=False
 VData=True
 
+[2F8F66DF]
+EData=True
+LData=False
+VData=True
+
+[0F08360F]
+EData=True
+LData=False
+VData=True
+
+[09201FF3]
+EData=True
+LData=False
+VData=True
+
+[2574DEE5]
+EData=True
+LData=False
+VData=True
+
+[0F6FE6F4]
+EData=True
+LData=False
+VData=True
+
+[03334F6F]
+EData=True
+LData=False
+VData=True
+
+[3183D94A]
+EData=True
+LData=False
+VData=True
+
+[3887936A]
+EData=True
+LData=False
+VData=True
+
