--- a/UIFramework/.vscode/launch.json
+++ b/UIFramework/.vscode/launch.json
@@ -1,17 +1,32 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Server",
             "type": "node",
-            "request": "launch",
-            "name": "启动程序",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${file}"
-        }
+            "request": "attach",
+            "address": "127.0.0.1",
+            "port": 23300,
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "${workspaceFolder}",
+        },
+        {
+            "name": "Client1",
+            "type": "node",
+            "request": "attach",
+            "address": "127.0.0.1",
+            "port": 23301,
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "${workspaceFolder}"
+        },
+        {
+            "name": "Client2",
+            "type": "node",
+            "request": "attach",
+            "address": "127.0.0.1",
+            "port": 23302,
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "${workspaceFolder}"
+        },
     ]
 }
